src/test/deca/avecObjet/valid/this_field_assign_int copy.deca
// Description :
//    Affectation d'un entier à un champ via this.
//
// Resultats :
//    OK

class A {
    int x;

    void set() {
        this.x = 6;
    }
}

{
}

